--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   lottie: ^1.0.0
-
+  fl_chart: ^0.66.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
