--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  lottie: ^1.0.0
+  lottie: ^3.1.0
   fl_chart: ^0.66.0
+  http: ^1.2.0
+  shared_preferences: ^2.2.2
+  async: ^2.11.0
+  carousel_slider: ^4.2.1
+  sqflite: ^2.3.2
+  sqflite_common_ffi: ^2.3.2+1
+  connectivity_plus: ^1.0.3
+  animated_text_kit: ^4.2.1
+  url_launcher: ^6.0.9
+  contacts_service: ^0.6.2
+  permission_handler: ^11.3.0
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
-
   uses-material-design: true
 
   assets:
