--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     <application
-        android:label="fintech_001"
+        android:label="Wan"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -30,6 +35,4 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
